[package]
name = "volo_secret_message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-http = { version = "*", features = ["default_server"] }
sonic-rs = "0.3.17"
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
tracing = "0.1.41"

dotenv = "0.15.0"
config = "0.13.3"

once_cell = "1.10.0"

tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.19"

tokio-postgres = { version = "0.7.11", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
